--- a/MiddlewaresSandbox/MiddlewaresSandbox.csproj
+++ b/MiddlewaresSandbox/MiddlewaresSandbox.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiteDB" Version="4.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
     <PackageReference Include="NetMiddlewares.Guid" Version="0.0.2" />
